--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.129.0",
     "sqlalchemy>=2.0.46",
+    "streamlit>=1.54.0",
     "uvicorn>=0.40.0",
 ]
